<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/alph70_black">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/popwin_menu_sendnotify"
            style="@style/popwind_button_styles"
            android:text="@string/popwind_mune_send_notification"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            style="@style/popwind_button_styles">
        </Button>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            style="@style/popwind_button_styles">
        </Button>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            style="@style/popwind_button_styles"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/popwin_menu_join"
            style="@style/popwind_button_styles"
            android:text="@string/popwind_mune_join"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/popwind_mune_create"
            style="@style/popwind_button_styles"
            android:text="@string/popwind_mune_create"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/popwind_menu_my"
            style="@style/popwind_button_styles"
            android:text="@string/popwind_mune_myself"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/popwin_menu_team"
            style="@style/popwind_button_styles"
            android:text="@string/popwind_mune_grouplist"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            android:id="@+id/popwind_menu_logout"
            android:text="@string/popwind_menu_logoff"
            style="@style/popwind_button_styles"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            style="@style/popwind_button_styles"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            style="@style/popwind_button_styles"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
        <Button
            style="@style/popwind_button_styles"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"/>
    </LinearLayout>


</LinearLayout>