<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white2">
    <LinearLayout
        android:id="@+id/main_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray">
        <Button
            android:id="@+id/join_activity_top_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TOP_BUTTON"
            android:text="@string/callback"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>

    <EditText
        android:id="@+id/join_activity_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_edittext_hint"
        android:textSize="17sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/join_activity_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/complete"/>
    </LinearLayout>


</LinearLayout>
