<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/main_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray">
        <Button
            android:id="@+id/creat_acticity_callback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TOP_BUTTON"
            android:text="@string/callback"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:id="@+id/www"/>

    <EditText
        android:id="@+id/create_activity_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/creat_edittext_hint"
        android:textSize="17sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:maxLength="15"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/create_activity_finish_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:text="@string/complete"/>


    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"/>-->

    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1">-->
        <!-- -->
    <!--</LinearLayout>-->


    <!--<TextView-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"/>-->


</LinearLayout>
