<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/main_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <Button
            android:id="@+id/register_acticity_callback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/TOP_BUTTON"
            android:text="@string/callback"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="fill_parent" />-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="23dp"-->
                <!--android:text="@string/username"/>-->
            <EditText
                android:id="@+id/register_ET_username"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray3"
                android:hint="用户名:1-10个字符长度"
                android:singleLine="true"
                android:maxLength="10"
                android:minLines="1"
                style="@style/ListStyle"
                />
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="fill_parent" />-->

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--<TextView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="fill_parent" />-->
                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textSize="23dp"-->
                    <!--android:text="@string/login_textview_acon"/>-->
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray3"
                    android:singleLine="true"
                    android:digits="@string/accon"
                    android:maxLength="15"
                    android:id="@+id/register_ET_acon"
                    style="@style/ListStyle"
                    android:hint="账号:4-15个长度的英文和字母"/>
                <!--<TextView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="fill_parent" />-->

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--<TextView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="fill_parent"/>-->
                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/login_textview_pass"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textSize="23dp"/>-->
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColorHint="@color/gray3"
                    android:singleLine="true"
                    android:digits="@string/password"
                    android:id="@+id/register_ET_pass"
                    style="@style/ListStyle"
                    android:hint="密码:至少4个字符"/>
                <!--<TextView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="fill_parent"/>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/register_BT_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_button_register"
                    android:textColor="@color/white"
                    style="@style/ListStyle"
                    android:background="@color/blue"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>